# hapr

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  init-wiki.yml  release.yml
docs/: HAPR-Framework.md  HAPR-User-Guide.md  HAProxy-Security-Guide.md  Home.md  Understanding-the-Report.md  advanced-security-features-research.md  gap-assessment-report.md
examples/: insecure.cfg  mixed.cfg  secure.cfg
framework/: hapr-baseline.yaml
hapr/: __init__.py  cli.py  cve_checker.py  models.py  parser.py  report.py  scanner.py  version_detect.py  visualizer.py
hapr/data/: hapr-baseline.yaml
hapr/data/checks/: access.yaml  backend.yaml  cve.yaml  disclosure.yaml  frontend.yaml  global_defaults.yaml  headers.yaml  logging.yaml  process.yaml  request.yaml  timeouts.yaml  tls.yaml  tls_live.yaml
hapr/framework/: __init__.py  baseline.py  engine.py
hapr/framework/checks/: __init__.py  access.py  backend.py  cve.py  disclosure.py  frontend.py  global_defaults.py  headers.py  logging_checks.py  process.py  request.py  timeouts.py  tls.py  tls_live.py
templates/: report.html.j2
test-configs/: audit-comparison.md  docker-compose.yml  echo-server.py  haproxy-test.pem  live-server.cfg  round2-comparison-report.md  round2-examples-results.txt  round2-github-results.txt  round2-live-report.html  round2-live-results.txt
test-configs/archive-round1/: hapr-live-report.html  hapr-tool-results.txt  manual-audit-report.md
test-configs/certs/: server.crt  server.key  server.pem
test-configs/github/: kubernetes-docker-packt.cfg
tests/: test_checks.py  test_checks_access.py  test_checks_backend.py  test_checks_cve.py  test_checks_disclosure.py  test_checks_frontend.py  test_checks_global_defaults.py  test_checks_headers.py  test_checks_logging.py  test_checks_process.py  test_checks_request.py  test_checks_timeouts.py  test_checks_tls.py  test_checks_tls_live.py  test_engine.py  test_parser.py
